style.css
/*
SPACING SYSTEM (px)
2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128

FONT SIZE SYSTEM (px)
10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
*/

/* 
MAIN COLOR: #087f5b
GRAY COLOR: #343a40
 */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* ------------------------ */
/* GENERAL STYLES */
/* ------------------------ */
body {
  font-family: inter, Arial, sans-serif;
  color: #343a40;
  border-bottom: 8px solid #087f5b;
}

.container {
  width: 960px;
  margin: 0 auto;
}

header,
section {
  margin-bottom: 96px;
}

h2 {
  margin-bottom: 48px;
  font-size: 36px;
  letter-spacing: -0.5px;
}

.grid-3-cols {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  column-gap: 80px;
}

.btn:link,
.btn:visited {
  display: inline-block;
  border-radius: 100px;
  font-weight: 500;
  text-decoration: none;
  text-transform: uppercase;
  background-color: #087f5b;
  color: #fff;
}

.btn:hover,
.btn:active {
  background-color: #099268;
}

.btn--big {
  padding: 16px 32px;
  font-size: 18px;
}

.btn--small {
  padding: 8px 12px;
  font-size: 14px;
}

img {
  border-radius: 12px;
}
/* ------------------------ */
/* COMPONENT STYLES */
/* ------------------------ */

/* HEADER */
header {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  column-gap: 80px;
  margin-top: 64px;
}

.header-text-box {
  align-self: center;
}

h1 {
  margin-bottom: 32px;
  /* text-shadow: 0 20px 3px rgba(0, 0, 0, 0.1); */
  font-size: 42px;
  line-height: 1.1;
  letter-spacing: -1px;
}

.header-text {
  margin-bottom: 24px;
  font-size: 18px;
  line-height: 1.7;
}

img {
  width: 100%;
}

/* FEATURES */
.features-icon {
  width: 32px;
  height: auto;
  margin-bottom: 24px;
  stroke: #087f5b;
}

.features-title {
  margin-bottom: 16px;
  font-size: 20px;
}

.features-text {
  font-size: 18px;
  line-height: 1.7;
}

/* TESTIMONIAL */
.testimonial-section {
  padding: 24px;
  border-radius: 12px;
  background-color: #087f5b;
  color: #fff;
}

.testimonial-box {
  grid-column: 2 / -1;
  align-self: center;
}

.testimonial-box h2 {
  margin-bottom: 24px;
  font-size: 24px;
  font-size: 18px;
  line-height: 1.7;
}

.testimonial-text {
  font-style: italic;
  margin-bottom: 24px;
  color: #e6fcf5;
}

.testimonial-author {
  color: #c3fae8;
}

/* CHAIRS */
.chair {
  border-radius: 12px;
  box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.07);
}

.chair img {
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

.chair-box {
  padding: 24px;
}

h3 {
  margin-bottom: 24px;
  font-size: 20px;
}

.chair-details {
  list-style: none;
  margin-bottom: 24px;
}

.chair-details li {
  display: flex;
  align-items: center;
  gap: 12px;
  margin-bottom: 24px;
}

.chair-details li:last-child {
  margin-bottom: 0;
}

.chair-icon {
  width: 24px;
  height: auto;
  stroke: #087f5b;
}

.chair-price {
  display: flex;
  justify-content: space-between;
  font-size: 20px;
}

footer {
  margin-bottom: 48px;
  font-size: 14px;
  color: #495057;
}

